syntax = "proto3";

package estudiante;

service EstudianteGrpcService {
  rpc ObtenerEstudiante (EstudianteRequest) returns (EstudianteResponse);
  rpc CrearEstudiante (NuevoEstudiante) returns (EstudianteResponse);
  rpc ActualizarEstudiante (ActualizarEstudianteRequest) returns (EstudianteResponse);
  rpc ListarEstudiantes (Empty) returns (EstudiantesResponse);
  rpc EliminarEstudiante (EstudianteRequest) returns (EliminarResponse);
}

message EstudianteRequest {
  string id = 1;
}

message EstudianteResponse {
  string id = 1;
  string nombre = 2;
  string apellido = 3;
  string correo = 4;
  string fecha_nacimiento = 5;
  string carrera = 6;
  int32 semestre = 7;
}

message NuevoEstudiante {
  string nombre = 1;
  string apellido = 2;
  string correo = 3;
  string fecha_nacimiento = 4;
  string carrera = 5;
  int32 semestre = 6;
}

message ActualizarEstudianteRequest {
  string id = 1;
  string nombre = 2;
  string apellido = 3;
  string correo = 4;
  string fecha_nacimiento = 5;
  string carrera = 6;
  int32 semestre = 7;
}

message EstudiantesResponse {
  repeated EstudianteResponse estudiantes = 1;
}

message EliminarResponse {
  string message = 1;
}

message Empty {}
